--- a/src/main/java/com/mycompany/peluqueriacanina/igu/VerDatos.form
+++ b/src/main/java/com/mycompany/peluqueriacanina/igu/VerDatos.form
@@ -160,7 +160,7 @@
             <Component class="javax.swing.JButton" name="btnElimonar">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Probando Uno\OneDrive\Escritorio\borrar.png"/>
+                  <Image iconType="2" name="C:\Users\Probando Uno\OneDrive\Documentos\NetBeansProjects\PeluqueriaCanina\src\main\resources\borrar.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Eliminar"/>
               </Properties>
@@ -171,7 +171,7 @@
             <Component class="javax.swing.JButton" name="btnEditar">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Probando Uno\OneDrive\Escritorio\editar.png"/>
+                  <Image iconType="2" name="C:\Users\Probando Uno\OneDrive\Documentos\NetBeansProjects\PeluqueriaCanina\src\main\resources\editar.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Editar"/>
               </Properties>
